--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello there. Glad you stopped by.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Northern Ohio</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Sports, music, games, spending time outside... </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Managing my own business.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Northern Ohio</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To exercise creativity.</p>
     </section>
 
     <footer id="footer">
